# al-cat-raz

./: .gitignore  AGENTS.md  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: ci.yml
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/modkit/: Cargo.toml
crates/modkit/src/: hashing.rs  lib.rs  manifest.rs  schema.rs
crates/modkit/src/schema/: benches.rs  items.rs  loot.rs  recipes.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
docs/: MODDING.md  PROJECT.md  TECH.md  VISION-deprecated.md
mods/base/: mod.toml
mods/base/data/items/: can_suit.ron  glass_claws.ron  glass_shard.ron  rusty_nail_claws.ron
mods/base/scripts/gadgets/: jagged_glass.rhai
