[workspace]
members = [
  "crates/core",
  "crates/client",
  "crates/server",
  "crates/modkit",
]
resolver = "2"

[workspace.package]

edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://example.com/al-cat-raz"
rust-version = "1.85"

[workspace.dependencies]
# Engine baseline (stable / low-churn)
bevy = { version = "0.17.3" }

# Networking
bevy_replicon = { version = "0.37" }

bevy_replicon_renet = { version = "0.13.0" }

# Maps
bevy_ecs_ldtk = { version = "0.13.0" }

# Debug UI / inspection
bevy_egui = { version = "0.38" }
bevy-inspector-egui = { version = "0.35.0" }

# Data / scripting / utilities
serde = { version = "1.0.217", features = ["derive"] }
ron = "0.8.1"
toml = "0.8.20"
rhai = { version = "1.22.2", features = ["sync"] }
thiserror = "2.0.11"
anyhow = "1.0.95"
sha2 = "0.10.8"
walkdir = "2.5.0"

# CLI + misc
clap = { version = "4.5.27", features = ["derive"] }
fastrand = "2.3.0"