[package]
name = "client"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
bevy.workspace = true
bevy_replicon.workspace = true
bevy_replicon_renet.workspace = true
clap.workspace = true
fastrand.workspace = true
anyhow.workspace = true

core = { path = "../core" }