[package]
name = "server"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
bevy.workspace = true
bevy_replicon.workspace = true
bevy_replicon_renet.workspace = true
clap.workspace = true
anyhow.workspace = true

core = { path = "../core" }

[lints.clippy]
type_complexity = "allow"
